fixtures/typescript/test-double/should_fail/stubHandler.ts
const stubHandler = (req: Request) => {
  return new Response("stubbed");
};
